# gitpane

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  release.yml
assets/: demo.tape  screenshot-commit.tape  screenshot-diff.tape  screenshot-main.tape  screenshots.tape
examples/: config.toml
src/: action.rs  app.rs  config.rs  event.rs  main.rs  tui.rs  update_checker.rs  watcher.rs
src/components/: confirm_dialog.rs  context_menu.rs  file_list.rs  git_graph.rs  mod.rs  path_input.rs  repo_list.rs  status_bar.rs
src/git/: commit_files.rs  graph.rs  graph_render.rs  mod.rs  scanner.rs  status.rs
