[package]
name = "gitpane"
version = "0.3.4"
edition = "2024"
description = "Multi-repo Git workspace dashboard TUI"
license = "MIT"
repository = "https://github.com/affromero/gitpane"
homepage = "https://github.com/affromero/gitpane"
readme = "README.md"
keywords = ["git", "tui", "dashboard", "multi-repo", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream", "serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
strum = { version = "0.27", features = ["derive"] }
directories = "6"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
git2 = { version = "0.20", features = ["vendored-openssl"] }
walkdir = "2"
dirs = "6"
notify = "8"
notify-debouncer-full = "0.7"
ureq = "3"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
